# telegram-rs-bot

./: .env  Cargo.toml  Dockerfile
src/: error.rs  main.rs
src/bot/: advice.rs  commands.rs  handlers.rs  kawaii.rs  mod.rs  models.rs  percent.rs  quotes.rs  responses.rs  waifu.rs  weather.rs
src/utils/: config.rs  logging.rs
